[package]
name = "class_recovery"
version = "0.1.0"
edition = "2021"
build = "./src/build.rs"

[dependencies]
inquire = { version = "0.7.5", default-features = false, features = ["crossterm"] }
zip = { version = "1.1.4", default-features = false, features = ["deflate"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
